--- a/DairyProject/templates/admin/deliveryboy_approval.html
+++ b/DairyProject/templates/admin/deliveryboy_approval.html
@@ -16,6 +16,8 @@
             <th>Driving License</th>
             <th>Created At</th>
             <th>Approve</th>
+            <th>Registration Approved</th>
+
           </tr>
         </thead>
         <tbody>
@@ -25,6 +27,8 @@
               <td>{{ request.delivery_boy.name }}</td>
               <td>{{ request.delivery_boy.mobile }}</td>
               <td>{{ request.delivery_boy.email }}</td>
+              <td>{{ request.delivery_boy.is_approved }}</td>
+
               <td>
                 {% if request.delivery_boy.driving_license %}
                   <a href="{{ request.delivery_boy.driving_license.url }}" target="_blank">View License</a>
