--- a/DairyProject/templates/delivery_register.html
+++ b/DairyProject/templates/delivery_register.html
@@ -2,75 +2,320 @@
 {% load static %}
 
 {% block body %}
-
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: rgb(150, 210, 236); /* Updated background color */
             margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
         }
 
-        h2 {
+
+        .registration-container {
+            background-color: whitesmoke;
+            border: 1px solid #fafcfd;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 10px 10px 10px rgba(178, 179, 180, 0.1);
             text-align: center;
-            color: #333;
+            max-width: 500px;
+            margin: 0 auto;
+            margin-top: 20px;
+        }
+
+        h1 {
+            color: #060606;
+        }
+        h3{
+            color: #FF0000;
         }
 
         form {
-            width: 400px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-        label {
+        .form-group {
+            text-align: left;
+        }
+
+        .form-group label {
             display: block;
-            margin-bottom: 8px;
-            color: #333;
+            font-weight: bold;
         }
 
-        input[type="text"],
-        input[type="email"],
-        input[type="password"],
-        input[type="file"],
-        select {
-            width: 100%;
+        .form-group input {
+            margin: 10px 10px;
             padding: 10px;
-            margin-bottom: 15px;
+            width: 100%;
             border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .form-group select {
+            margin: 10px 10px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 12px;
         }
 
         button {
-            background-color: #1d66c1;
+            background-color: #007BFF;
             color: #fff;
-            padding: 10px 20px;
+            padding: 10px;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #0056b3;
+        }
+
+        a {
+            margin-top: 10px;
+            text-decoration: none;
+            color: #007BFF;
+        }
+
+        .error-message {
+            color: #FF0000;
+            font-size: 14px;
+            margin-top: 5px;
+            text-align: center;
+        }
+
+        .mobile-input-container {
+            display: flex;
+            align-items: center;
+        }
+
+        .password-input-container {
+            display: flex;
+            align-items: center;
+        }
+
+        .password-input-container .fa-eye, .password-input-container .fa-eye-slash {
+            cursor: pointer;
+            font-size: 10px;
+            margin-left: -30px;
+            z-index: 1;
         }
     </style>
 
-</head>
-<h2>Delivery Boy Registration</h2>
+    <script>
+        function capitalizeFirstLetter(inputId) {
+            const input = document.querySelector(`input[name="${inputId}"]`);
+            const inputValue = input.value;
+            if (inputValue.length > 0) {
+                input.value = inputValue.charAt(0).toUpperCase() + inputValue.slice(1);
+            }
+        }
 
-<body>
-    <form method="post" action="{% url 'delivery_register' %}" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
-</body>
-{% endblock %}
+        function validateEmail() {
+            const emailInput = document.querySelector('input[name="email"]');
+            const emailValue = emailInput.value;
+            const emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
+            const emailError = document.querySelector('#emailError');
 
-</html>
+            if (!emailPattern.test(emailValue)) {
+                emailError.textContent = 'Invalid email format';
+            } else {
+                emailError.textContent = '';
+            }
+        }
+
+        function validateName() {
+            const nameInput = document.querySelector('input[name="name"]');
+            const nameValue = nameInput.value;
+            const namePattern = /^[a-zA-Z ]*$/; // Only alphabets and space allowed
+            const nameError = document.querySelector('#nameError');
+
+            if (!namePattern.test(nameValue)) {
+                nameError.textContent = 'Name should contain only alphabets and spaces';
+            } else {
+                nameError.textContent = '';
+            }
+        }
+
+        function validatemobileNumber() {
+            const mobileInput = document.querySelector('input[name="phone"]');
+            const mobileValue = mobileInput.value;
+            const mobilePattern = /^[6789]\d{9}$/; // Improved Indian standard format
+            const mobileError = document.querySelector('#phoneError');
+
+            if (!mobilePattern.test(mobileValue)) {
+                mobileError.textContent = 'Invalid mobile number format';
+            } else {
+                mobileError.textContent = '';
+            }
+        }
+
+        function validateDrivingLicense() {
+            const drivingLicenseInput = document.querySelector('input[name="driving_license"]');
+            const drivingLicenseValue = drivingLicenseInput.value;
+            const allowedExtensions = /(\.jpg|\.jpeg|\.png)$/i;
+            const drivingLicenseError = document.querySelector('#drivingLicenseError');
+
+            if (!allowedExtensions.exec(drivingLicenseValue)) {
+                drivingLicenseError.textContent = 'Invalid file format. Please upload a valid image file (JPG, JPEG, PNG).';
+            } else {
+                drivingLicenseError.textContent = '';
+            }
+        }
+
+        function validateForm() {
+            const nameInput = document.querySelector('input[name="name"]');
+            const phoneInput = document.querySelector('input[name="phone"]');
+            const drivingLicenseInput = document.querySelector('input[name="driving_license"]');
+            const nameValue = nameInput.value;
+            const phoneValue = phoneInput.value;
+            const drivingLicenseValue = drivingLicenseInput.value;
+            const nameError = document.querySelector('#nameError');
+            const phoneError = document.querySelector('#phoneError');
+            const drivingLicenseError = document.querySelector('#drivingLicenseError');
+
+            // Validate name
+            if (nameValue.trim() === '') {
+                nameError.textContent = 'Name is required';
+            } else {
+                validateName();
+            }
+
+            // Validate phone
+            if (phoneValue.trim() === '') {
+                phoneError.textContent = 'Phone is required';
+            } else {
+                const mobilePattern = /^[6789]\d{9}$/; // Improved Indian standard format
+                if (!mobilePattern.test(phoneValue)) {
+                    phoneError.textContent = 'Invalid mobile number format';
+                } else {
+                    phoneError.textContent = '';
+                }
+            }
+
+            // Additional validation for driving license
+            validateDrivingLicense();
+
+            // Return true if all validations pass
+            return nameError.textContent === '' && phoneError.textContent === '' && drivingLicenseError.textContent === '';
+        }
+
+        function validatePassword() {
+            const passwordInput = document.querySelector('input[name="password"]');
+            const passwordValue = passwordInput.value;
+            const passwordPattern = /^(?=.*[0-9])(?=.*[!@#$%^&*])([a-zA-Z0-9!@#$%^&*]+){6,}$/;
+            const passwordError = document.querySelector('#passwordError');
+
+            if (!passwordPattern.test(passwordValue)) {
+                passwordError.innerHTML = "Password must be:<br>6 characters!<br>at least one number!<br>at least one special symbol!";
+
+            } else {
+                passwordError.textContent = '';
+            }
+        }
+
+        function validateConfirmPassword() {
+            const passwordInput = document.querySelector('input[name="password"]');
+            const confirmPasswordInput = document.querySelector('input[name="confirmpassword"]');
+            const confirmPasswordError = document.querySelector('#confirmpasswordError');
+
+            if (passwordInput.value !== confirmPasswordInput.value) {
+                confirmPasswordError.textContent = 'Passwords do not match';
+            } else {
+                confirmPasswordError.textContent = '';
+            }
+        }
+
+        function togglePasswordVisibility(inputId) {
+            const passwordInput = document.querySelector(`input[name="${inputId}"]`);
+            const passwordToggle = document.querySelector(`#${inputId}Toggle`);
+            if (passwordInput.type === 'password') {
+                passwordInput.type = 'text';
+                passwordToggle.classList.add('fa-eye-slash');
+                passwordToggle.classList.remove('fa-eye');
+            } else {
+                passwordInput.type = 'password';
+                passwordToggle.classList.add('fa-eye');
+                passwordToggle.classList.remove('fa-eye-slash');
+            }
+        }
+
+        function showAlert(message, isError = false) {
+            const alert = document.getElementById('alert');
+            alert.textContent = message;
+            alert.style.display = 'block';
+            alert.style.color = isError ? 'red' : 'green';
+
+            if (!isError) {
+                // If it's a success message, hide it after 3 seconds
+                setTimeout(function () {
+                    alert.style.display = 'none';
+                }, 3000);
+            }
+        }
+    </script>
+
+    <body>
+        <div class="registration-container">
+            <h1>Delivery Boy</h1>
+            <h5>Register Here</h5>
+            <form method="POST" action="{% url 'delivery_register' %}" onsubmit="return validateForm()" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input type="text" name="name" id="name" placeholder="Full Name" required oninput="capitalizeFirstLetter('name')" onchange="validateName()">
+                    <div class="error-message" id="nameError"></div>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email" required oninput="validateEmail()">
+                    <div class="error-message" id="emailError"></div>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <div class="mobile-input-container">
+                        <select name="country_code" id="country_code">
+                            <option value="+91">+91 (India)</option>
+                            <!-- Add more options for other countries -->
+                        </select>
+                        <input type="text" name="phone" id="phone" placeholder="Phone" required oninput="validatemobileNumber()">
+                    </div>
+                    <div class="error-message" id="phoneError"></div>
+                </div>
+                <div class="form-group">
+                    <label for="driving_license">Driving License</label>
+                    <input type="file" name="driving_license" id="driving_license" accept=".jpg, .jpeg, .png" required onchange="validateDrivingLicense()">
+                    <div class="error-message" id="drivingLicenseError"></div>
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <div class="password-input-container">
+                        <input type="password" name="password" id="password" placeholder="Password" required oninput="validatePassword()">
+                        <i class="fa fa-eye" id="passwordToggle" onclick="togglePasswordVisibility('password')"></i>
+                    </div>
+                    <div class="error-message" id="passwordError"></div>
+                </div>
+                <div class="form-group">
+                    <label for="confirmpassword">Confirm Password</label>
+                    <div class="password-input-container">
+                        <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Confirm Password" required oninput="validateConfirmPassword()">
+                        <i class="fa fa-eye" id="confirmpasswordToggle" onclick="togglePasswordVisibility('confirmpassword')"></i>
+                    </div>
+                    <div class="error-message" id="confirmpasswordError"></div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" id="submit">Register</button>
+                </div>
+            </form>
+            <a href="{% url 'login' %}">Already have an account? Login</a>
+        </div>
+    </body>
+
+    {% for message in messages %}
+        <h3>{{ message }}</h3>
+    {% endfor %}
+{% endblock body %}
