--- a/DairyProject/templates/inc/selnav.html
+++ b/DairyProject/templates/inc/selnav.html
@@ -18,7 +18,7 @@
                     {% endif %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item" href="{% url 'seller_password_change' %}" data-url="{% url 'seller_password_change' %}">
+                    <a class="dropdown-item" href="{% url 's_change_password' %}" data-url="{% url 's_change_password' %}">
                         <i class="fas fa-key"></i> Change Password
                     </a>
                     <a class="dropdown-item" href="{% url 'logout' %}">
