--- a/DairyProject/templates/v_register.html
+++ b/DairyProject/templates/v_register.html
@@ -287,7 +287,7 @@ nav {
                     <div class="error-message" id="confirmpasswordError"></div>
                 </div>
                 <div class="form-group">
-                    <label for="custom_year">Custom Year (4-digit, 1974-2023):</label>
+                    <label for="custom_year">Start Year:</label>
                     <input type="text" name="custom_year" id="custom_year" placeholder="Enter Year" maxlength="4" pattern="[0-9]{4}" required>
                     <div class="error-message" id="customYearError"></div>
                 </div>
