--- a/DairyProject/templates/dash/admindash.html
+++ b/DairyProject/templates/dash/admindash.html
@@ -127,8 +127,8 @@ body {
     </a>
     </a>    <a href="{% url 'all_milk_details' %}" data-url="{% url 'all_milk_details' %}"><i class="fas fa-hand-holding"></i> Milk Collection</a>
     <a href="{% url 'admin_view_cattle' %}" data-url="{% url 'admin_view_cattle' %}"><i class="fas fa-shopping-cart"></i> Cattle</a>
-    <a href="{% url 'product_detail' %}" data-url="{% url 'product_detail' %}"><i class="fas fa-horse"></i> Products</a>
-    <a href="{% url 'admin_cart' %}" data-url="{% url 'admin_cart' %}"><i class="fas fa-horse"></i> Carts</a>
+    <a href="{% url 'p_detail' %}" data-url="{% url 'p_detail' %}"><i class="fas fa-horse"></i> Products</a>
+    <a href="{% url 'view_carts' %}" data-url="{% url 'view_carts' %}"><i class="fas fa-horse"></i> Carts</a>
     <a href="{% url 'view_carts' %}" data-url="{% url 'view_carts' %}"><i class="fas fa-horse"></i> Orders  </a>
     <a href="{% url 'pending_sellers' %}" data-url="{% url 'pending_sellers' %}"><i class="fas fa-horse"></i> Approve</a>
     <a href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -151,16 +151,6 @@ body {
     <main>
         <div id="dashboard-content"></div>
     </main>
-    <a href="{% url 'product_detail' %}">
-        <img src="{% static 'img/e.jpg' %}" alt="Dashboard Image" style="width: 30%; height: 30%; border: 2px solid #e4cccc; border-radius: 8px;">
-    </a>
-    <a href="{% url 'product_detail' %}">
-        <img src="{% static 'img/e.jpg' %}" alt="Dashboard Image" style="width: 30%; height: 30%; border: 2px solid #e4cccc; border-radius: 8px;">
-    </a>
-    <a href="{% url 'product_detail' %}">
-        <img src="{% static 'img/e.jpg' %}" alt="Dashboard Image" style="width: 30%; height: 30%; border: 2px solid #e4cccc; border-radius: 8px;">
-    </a>
-</div>
 
 <!-- Bootstrap JS and jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
