--- a/DairyProject/templates/dash/c_dashboard.html
+++ b/DairyProject/templates/dash/c_dashboard.html
@@ -151,7 +151,7 @@ body {
                 <a href="{% url 'view_cart' %}" data-url="{% url 'view_cart' %}"><i class="fas fa-shopping-cart"></i> Cart</a>
 
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                    <a class="dropdown-item" href="{% url 'seller_password_change' %}" data-url="{% url 'seller_password_change' %}">
+                    <a class="dropdown-item" href="{% url 's_change_password' %}" data-url="{% url 's_change_password' %}">
                         <i class="fas fa-key"></i> Change Password
                     </a>
                     <a class="dropdown-item" href="{% url 'logout' %}">
