--- a/DairyProject/templates/category/product_detail.html
+++ b/DairyProject/templates/category/product_detail.html
@@ -36,7 +36,8 @@
                                 </div>
                                 <div class="text-center p-4">
                                     <a class="d-block h5" href="#">{{ product.p_name }}</a>
-                                    <span class="text-primary me-1">₹{{ product.price }}</span>
+                                    <span class="text-primary me-1">₹{{ product.price }}</span><br>
+                                    <span class="text-primary me-1">{{ product.quantity }} left</span>
                                 </div>
                             </div>
                         </div>
