--- a/DairyProject/templates/cattle/view_cattle.html
+++ b/DairyProject/templates/cattle/view_cattle.html
@@ -128,8 +128,14 @@
                 <td>{{ cattle.Colour }}</td>
                 <td>{{ cattle.feed }}</td>
                 <td>{{ cattle.milk_obtained }}</td>
-                <td><img src="{{ cattle.photo.url }}" alt="Cattle Photo" style="width: 100px; height: auto;"></td>
-                <!-- <td>{% if cattle.vaccination %} Vaccinated {% else %} Not Vaccinated {% endif %}</td> -->
+                <td>
+                    {% if cattle.photo %}
+                        <img src="{{ cattle.photo.url }}" alt="Cattle Photo" style="width: 100px; height: auto;">
+                    {% else %}
+                        No Photo
+                    {% endif %}
+                </td>
+                                <!-- <td>{% if cattle.vaccination %} Vaccinated {% else %} Not Vaccinated {% endif %}</td> -->
                 <td>
                     {% if cattle.vaccination %}
                         <a href="{% url 'vac_details' cattle.id %}">View Vaccination</a>
