--- a/DairyProject/templates/dash/s_dashboard.html
+++ b/DairyProject/templates/dash/s_dashboard.html
@@ -92,7 +92,7 @@ body {
     <a href="{% url 'own_milk_details' %}" data-url="{% url 'own_milk_details' %}"><i class="fas fa-hand-holding"></i> Todays Collection</a>
     <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-shopping-cart"></i> Product</a>
     <a href="{% url 'view_cattle' %}" data-url="{% url 'view_cattle' %}"><i class="fas fa-horse"></i> Cattle</a>
-    <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-horse"></i> Schedule Appointment</a>
+    <!-- <a href="{% url 'prod_view' %}" data-url="{% url 'prod_view' %}"><i class="fas fa-horse"></i> Schedule Appointment</a> -->
 </div>
 </div>
 
