--- a/DairyProject/templates/dash/v_dashboard.html
+++ b/DairyProject/templates/dash/v_dashboard.html
@@ -83,7 +83,7 @@
 {% block body %}
 <body>
 
-    {% include 'inc/delnav.html' %}
+    {% include 'inc/vetnav.html' %}
 
     
         <!-- Sidebar -->
