--- a/DairyProject/templates/contact.html
+++ b/DairyProject/templates/contact.html
@@ -32,6 +32,7 @@
     <!-- Template Stylesheet -->
     <link href="{% static 'css/style1.css' %}" rel="stylesheet">
 </head>
+{% include 'inc/navbar.html' %}
 
 <body>
     <!-- Spinner Start -->
@@ -69,19 +70,6 @@
                                     </div>
                                 </div>
 
-                            <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
-                                    <label for= "email">Your Email</label>
-                                </div>
-                            </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required> <!-- Added 'required' attribute -->
