--- a/DairyProject/templates/inc/vetnav.html
+++ b/DairyProject/templates/inc/vetnav.html
@@ -8,13 +8,14 @@
             <img class="img-fluid" src="{% static '/img/logo.jpeg' %}" height="80" width="80" alt="Logo">
     </a>
         <ul class="navbar-nav navbar-nav-right">   
-            
+            <a href="{% url 'contact' %}" class="nav-item nav-link"><button>Contact</button></a>
+  
             <li class="nav-item nav-profile dropdown">
-                <a class="nav-link dropdown-toggle" href="{% url 'seller_profile' %}" data-toggle="dropdown" id="profileDropdown">
-                    {% if seller_profile.profile_photo %}
-                        <img src="{{ seller_profile.profile_photo.url }}" alt="Profile Photo" height="60" width="60"> {{ seller_profile.first_name }} {{ seller_profile.last_name }}
+                <a class="nav-link dropdown-toggle" href="{% url 'vet_profile' %}" data-toggle="dropdown" id="profileDropdown">
+                    {% if vet_profile.profile_photo %}
+                    <img src="{{ vet_profile.profile_photo.url }}" alt="Profile Photo" height="100" width="100">
                     {% else %}
-                        <i class="ti-user"></i>
+                    <i class="ti-user"></i>
                     {% endif %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
